# guardloop

./: CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish-pypi.yml
docs/: design.md  project-overview.md  pypi-publishing.md  roadmap.md
docs/media/: README.md
examples/: langgraph_guarded.py  live_anthropic_basic.py  live_openai_basic.py  openai_agents_guarded.py  runaway_cost_prevention.py  tool_circuit_breaker.py  verifier_retry_loop.py
src/agentruntime/: __init__.py  budget.py  circuit_breaker.py  context.py  exceptions.py  models.py  pricing.py  runtime.py  tools.py
src/agentruntime/providers/: __init__.py  anthropic.py  openai.py
src/agentruntime/telemetry/: __init__.py  conventions.py  tracer.py
src/guardloop/: __init__.py  budget.py  circuit_breaker.py  context.py  exceptions.py  models.py  pricing.py  runtime.py  tokenization.py  tools.py  verifier.py
src/guardloop/adapters/: __init__.py  langgraph.py  openai_agents.py
src/guardloop/providers/: __init__.py  anthropic.py  openai.py
src/guardloop/telemetry/: __init__.py  conventions.py  tracer.py
tests/: fakes.py  langchain_fakes.py  openai_agents_fakes.py  test_budget.py  test_circuit_breaker.py  test_langgraph_adapter.py  test_openai_agents_adapter.py  test_providers.py  test_runtime.py  test_telemetry.py  test_verifier.py
