[project]
name = "agentruntime"
version = "0.1.0"
description = "A production runtime guardrail for AI agents: budget caps, timeouts, tool limits, and OpenTelemetry traces."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.97.0,<1",
    "openai>=2.33.0,<3",
    "opentelemetry-api>=1.41.1,<2",
    "pydantic>=2.13.3,<3",
    "tiktoken>=0.12.0,<1",
]

[project.optional-dependencies]
otel = [
    "opentelemetry-exporter-otlp>=1.41.1,<2",
    "opentelemetry-sdk>=1.41.1,<2",
]

[dependency-groups]
dev = [
    "opentelemetry-exporter-otlp>=1.41.1,<2",
    "opentelemetry-sdk>=1.41.1,<2",
    "pytest>=9.0.3,<10",
    "pytest-asyncio>=1.3.0,<2",
    "pytest-cov>=7.1.0,<8",
    "pyright>=1.1.409,<2",
    "ruff>=0.15.12,<0.16",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF"]

[tool.ruff.format]
quote-style = "double"

[tool.pyright]
include = ["src", "tests", "examples"]
pythonVersion = "3.11"
typeCheckingMode = "strict"
reportMissingTypeStubs = false
