[project]
name = "guardloop"
version = "0.3.0"
description = "A production runtime guardrail for AI agents: budget caps, timeouts, tool limits, circuit breakers, verifier retries, and OpenTelemetry traces."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "awesome-pro", email = "147910430+awesome-pro@users.noreply.github.com" },
]
maintainers = [
    { name = "awesome-pro", email = "147910430+awesome-pro@users.noreply.github.com" },
]
keywords = [
    "agentic-ai",
    "ai-agents",
    "ai-safety",
    "anthropic",
    "circuit-breaker",
    "llm",
    "mlops",
    "openai",
    "opentelemetry",
    "retry",
    "runtime-guardrails",
    "self-healing",
    "verifier",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "anthropic>=0.97.0,<1",
    "openai>=2.33.0,<3",
    "opentelemetry-api>=1.41.1,<2",
    "pydantic>=2.13.3,<3",
    "tiktoken>=0.12.0,<1",
]

[project.urls]
Homepage = "https://github.com/awesome-pro/guardloop"
Documentation = "https://github.com/awesome-pro/guardloop#readme"
Repository = "https://github.com/awesome-pro/guardloop"
Issues = "https://github.com/awesome-pro/guardloop/issues"
Changelog = "https://github.com/awesome-pro/guardloop/blob/main/CHANGELOG.md"

[project.optional-dependencies]
otel = [
    "opentelemetry-exporter-otlp>=1.41.1,<2",
    "opentelemetry-sdk>=1.41.1,<2",
]

[dependency-groups]
dev = [
    "opentelemetry-exporter-otlp>=1.41.1,<2",
    "opentelemetry-sdk>=1.41.1,<2",
    "pytest>=9.0.3,<10",
    "pytest-asyncio>=1.3.0,<2",
    "pytest-cov>=7.1.0,<8",
    "pyright>=1.1.409,<2",
    "ruff>=0.15.12,<0.16",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF"]

[tool.ruff.format]
quote-style = "double"

[tool.pyright]
include = ["src", "tests", "examples"]
pythonVersion = "3.11"
typeCheckingMode = "strict"
reportMissingTypeStubs = false
